--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "axios": "^0.27.2",
     "gatsby": "^4.8.0",
     "gatsby-plugin-image": "^2.9.1",
     "gatsby-plugin-mdx": "^3.14.0",
