--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "axios": "^0.27.2",
+    "d3": "^7.4.4",
     "gatsby": "^4.8.0",
     "gatsby-plugin-image": "^2.9.1",
     "gatsby-plugin-mdx": "^3.14.0",
     "gatsby-plugin-sharp": "^4.9.1",
     "gatsby-source-filesystem": "^4.13.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0"
   }
 }
