--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "axios": "^0.27.2",
+    "axios-retry": "^3.2.5",
     "d3": "^7.4.4",
     "gatsby": "^4.8.0",
     "gatsby-plugin-image": "^2.9.1",
