--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby build && gh-pages -d public -b main"
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
@@ -25,9 +26,13 @@
     "gatsby-plugin-mdx": "^3.14.0",
     "gatsby-plugin-sharp": "^4.9.1",
     "gatsby-source-filesystem": "^4.13.0",
+    "push-dir": "^0.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
